--- a/css/files.css
+++ b/css/files.css
@@ -4,6 +4,13 @@
 /*    teal: #b5e4e7*/
 }
 
+/*
+#wrap {
+    width:1325px;
+    position: absolute; 
+    height: 700px; 
+}
+*/
 body {
     background-color: #384e72; 
     color: ghostwhite; 
