--- a/css/files.css
+++ b/css/files.css
@@ -11,11 +11,12 @@
     height: 700px; 
 }
 */
+
 body {
     position: relative; 
     background-color: #384e72; 
     color: ghostwhite; 
-    font-family:'Poppins', "Open Sans","Trebuchet MS", sans-serif;
+    font-family: "Poppins', "Open Sans","Trebuchet MS", sans-serif;
     width: 100%;    
 }
 
@@ -26,6 +27,7 @@ body {
 }
 
 body h1 {
+    font-family: "Playfair Display", sans-serif; 
     font-size: 2.25em; 
     font-weight: 600;
 }
@@ -75,8 +77,6 @@ body h1 {
     right: 0;
     height: 200px; 
 }
-
-
 
 #top {
     top: 0;
