--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,55 @@
 /*
 teal: #b5e4e7
 salmon: #ffc5b7
+blue: #384e72
 */
 
 body {
-/*    background-color: #384e72; */
-    height: 50%; 
-    color: ghostwhite; 
+    color: white; 
     font-weight: 200; 
-    font-family: "Assistant", "Open Sans","Trebuchet MS", sans-serif;
-    font-size: 20px;
+/*    font-family: "Assistant", "Open Sans","Trebuchet MS", sans-serif;*/
+    font-family:"Raleway", sans-serif; 
+    font-size: 19px;
     margin: 0px; 
     padding: 0px; 
-    background-color: #384e72; 
-    display: block; 
+    background: #384e72; 
+/*    background: linear-gradient(#384e72 50%, white 50%); */
+    display: block;
+    height: 100%; 
 }
-#section_two h1 {
-    padding-top: 5px; 
-    display: inline-block; 
+
+#about h1 {
+    font-size: 32px; 
+    font-family: "Roboto Mono", monospace; 
+    font-weight: 300; 
+    margin-bottom: -5px; 
 }
+
 .wrapper {
     margin: 0 auto; 
     max-width: 575px; 
     min-width: 300px; 
-    padding: 1.5em; 
+    padding: 30px 20px 0px 20px; 
+}
+
+.wrapper_two {
+    border-bottom: 0.75px solid white; 
+    margin-right: -1%; 
+    padding-bottom: 60px; 
+}
+
+#section_two {
+    font-weight: 100; 
+    display: block; 
+    padding: 0px; 
+    width: 88%; 
+    color: white;    
 }
 
 #contact_links {
+    margin: -11px 0px -5px 0px; 
     list-style: none; 
-    padding-left: 0px;  
+    padding-left: 0px;
 }   
 
 #contact_links li { 
@@ -36,43 +57,136 @@ body {
     padding-right: 15%; 
 }
 
-.info {
-    list-style: none; 
-    margin-left: -9%; 
-    margin-top: -3%;
+#contact_links li a img { 
+    transition: all 0.15s ease; 
 }
 
-.info ul {
-    list-style: none; 
+#contact_links li a img:hover {
+    transform: rotate(-25deg); 
 }
 
-.info li {
-    float: left; 
+#section_two h1 {
+    font-size: 32px; 
+    font-family: "Roboto Mono", monospace; 
+    font-weight: 300; 
+    display: block; 
+/*    font-weight: 600; */
+    margin: 16px 0 18px 0; 
+    padding-top: 0%; 
 }
 
 #descriptions {
+    margin-top: -10px; 
+    list-style: none; 
+    display: block; 
     width: 87%; 
 }
 
 #need_float {
-    display: inline; 
+    min-width: 75%; 
+    display: block; 
     padding: 0; 
     margin: 0; 
-    width: 80%; 
 }
 
 #descriptions li a {
-    font-weight: 400; 
     color: white;
     text-decoration: underline; 
 /*    text-decoration-style: dotted; */
-    text-decoration-color: #b5e4e7; 
+    text-decoration-color: #ffc5b7; 
 }
 
 #descriptions li a:hover {
+    cursor: pointer
+    font-weight: 500; 
     text-decoration: none; 
     color: #ffc5b7; 
 }
+
+.buttons {
+    display: inline;  
+}
+
+.buttons button {
+    margin-right: 15%; 
+    font-family:"Raleway", sans-serif; 
+    border-radius: 7px; 
+    background-color: #384e72; 
+    color: white; 
+    border: 0.5px solid white; 
+    padding: 10px; 
+    -webkit-transition: .5s all;   
+    -webkit-transition-delay: 0s; 
+    -moz-transition: .5s all;   
+    -moz-transition-delay: 0s; 
+    -ms-transition: .5s all;   
+    -ms-transition-delay: 0s; 
+    -o-transition: .5s all;   
+    -o-transition-delay: 0s; 
+    transition: .5s all;   
+    transition-delay: 0s;  
+}
+
+
+.buttons button:hover {
+    cursor: pointer; 
+    font-family:"Raleway", sans-serif; 
+    border-radius: 7px; 
+    background-color: white; 
+    color: #384e72; 
+    border: 0.5px solid white; 
+    padding: 10px; 
+    -webkit-transition-delay: 0s;
+    -moz-transition-delay: 0s;
+    -ms-transition-delay: 0s;
+    -o-transition-delay: 0s;
+    transition-delay: 0s;
+}
+
+#button_list {
+    text-align: center; 
+    position: absolute;  
+    list-style: none; 
+    padding: 0px; 
+}
+
+#button_list li {
+    padding-left: 30%; 
+    width: 20%; 
+    display: block; 
+    text-align: right;
+    padding-bottom: 18px; 
+}
+
+#button_list li button {
+}
+
+#profile {
+    display: inline-block; 
+}
+
+#button_list {
+    text-align: center; 
+    margin: 0px; 
+    padding: 0px; 
+    display: inline-block; 
+}   
+
+#profile {
+    height: auto;
+    width: auto; 
+    max-height: 150px; 
+    max-width: 150px; 
+    border-radius: 50%; 
+}
+
+
+
+
+
+
+
+
 
 
 
