redesigned index working on js

--- a/css/files.css
+++ b/css/files.css
@@ -16,7 +16,7 @@ body {
     position: relative; 
     background-color: #384e72; 
     color: ghostwhite; 
-    font-family: "Poppins', "Open Sans","Trebuchet MS", sans-serif;
+    font-family: Poppins', "Open Sans","Trebuchet MS", sans-serif;
     width: 100%;    
 }
 
