--- a/css/styles.css
+++ b/css/styles.css
@@ -71,21 +71,16 @@ body {
     transform: rotate(-30deg);  
 }
 
-#section_two {
-    width: 100%; 
-}
-
 #section_two h1 {
     font-size: 32px; 
     font-family: "Roboto Mono", monospace; 
     font-weight: 300; 
     display: block; 
-    margin: 16px 0 18px 0; 
+    margin: 16px 0 0px 0; 
     padding-top: 0%; 
 }
 
 .buttons button {
-    margin-top: 52px; 
     vertical-align: middle; 
     font-family:"Raleway", sans-serif; 
     border-radius: 7px; 
@@ -122,45 +117,54 @@ body {
 }
 
 #button_list {
-    text-align: right; 
-    display: inline-block;    
-    list-style: none;
-    margin-top: -16.6px;  
-    margin-left: -10px;
-}
-
-#profile {
-    display: inline-block; 
-    height: auto;
-    width: auto; 
-    margin-top: 43px; 
-    max-height: 150px; 
-    max-width: 150px; 
-    border-radius: 50%; 
-}
-
-#last_line #placeholder {
-    display: inline-block; 
-    margin-top: 10px; 
-    margin-left: 30px; 
-    top: 341px; 
-    left: 100%; 
-    height: 210px; 
-    border: 0.75px solid white;
-}
-
-.hidden {
-    display: block;
-}
-#last_line {
     width: 100%; 
+    padding: 0px 0px 0px 15px; 
+    text-align: right; 
+    position: relative; 
+    list-style: none;
+}
+
+#button_list li {
+    margin-right: 15%; 
+    float: right; 
+}
+
+#button_list li button {
     margin-bottom: 20px; 
 }
 
+#button_list_container {
+    padding-top: 4%; 
+    top: 0px; 
+    left: 0px; 
+    margin: 0px; 
+    width: 250px; 
+    display: flex;
+    flex-grow: 9; 
+}
+
+#profile_pic {
+    margin-top: 15px; 
+    margin-bottom: 0px; 
+    position: relative;
+    height: 150px; 
+    width: 150px; 
+    border-radius: 50%; 
+    display: inline-block;
+}
+
+.hidden {
+    display: inline-block;
+}
+
+
 .hidden h5 {
+    font-family: "Roboto Mono", monospace; 
     font-size: 15px; 
-    padding: 0px 0px 7px 0px; 
-    margin: 0px;
+    margin: 0px 0px 7px 0px; 
+    color: white; 
+    font-weight: 400; 
+    font-size: 16px; 
 }
 .hidden a {
     font-family: "Roboto Mono", monospace; 
@@ -168,7 +172,6 @@ body {
     margin: 0px 0px 7px 0px; 
     color: white; 
     text-decoration: underline solid #ffc5b7; 
-    border: 1px soild green; 
     font-weight: 400; 
     font-size: 16px; 
     -webkit-transition: .3s all;   
@@ -205,46 +208,74 @@ body {
 }
 
 .hidden br {
-    line-height: 175%;  
+    display: block; /* makes it have a width */
+    content: ""; /* clears default height */
+    margin-top: 2.25%; /* change this to whatever height you want it */
+}
+
+#triangle {
+    height: 100%; 
+    width: 100%; 
+    border: 0.75px solid white; 
+}
+
+#placeholder {
+    min-width: 100px;  
+    width: auto; 
+    height: auto; 
+    margin-top: 10px; 
+    display: flex; 
+    flex-wrap: wrap;
+    flex-grow: 3; 
 }
 
 #projects_text {
+    margin-top: 10px; 
     display: none; 
-    position: absolute; 
-    top: 342px; 
-    left: 50%; 
-    overflow-y: scroll; 
-    height: 215px; 
-    width: 300px; 
+    width: 57%;
+    min-width: 300px; 
+    height: 210px; 
+    overflow-y: scroll;  
+    flex-wrap: wrap;
+    flex-grow: 3;
 }
 
 #experience_text {
+    margin-top: 10px; 
     display: none; 
-    position: absolute; 
-    top: 342px; 
-    left: 50%; 
-    overflow-y: scroll; 
-    height: 220px; 
-    width: 300px; 
+    width: 57%;
+    min-width: 300px; 
+    height: 210px; 
+    overflow-y: scroll;  
+    flex-wrap: wrap;
+    flex-grow: 3;
 }
 
 #music_text {
+    margin-top: 10px; 
     display: none; 
-    position: absolute; 
-    top: 342px; 
-    left: 50%; 
-    overflow-y: scroll; 
-    height: 220px; 
-    width: 300px;
+    width: 57%;
+    min-width: 300px; 
+    height: 210px; 
+    overflow-y: scroll;  
+    flex-wrap: wrap;
+    flex-grow: 3;
 }
 
-.buttons #projects {
-    margin-top: 20px; 
+#section_two { 
+    width: 100%; 
 }
 
+.prof_button_place_container {
+    vertical-align: center; 
+    display: flex; 
+    flex-wrap: wrap; 
+}
 
-
-
+#music h5 {
+    margin: 0; 
+    padding: 0; 
+}
 
 
 
