--- a/css/styles.css
+++ b/css/styles.css
@@ -254,10 +254,9 @@ body {
 #music_text {
     margin-top: 10px; 
     display: none; 
-    width: 57%;
+    width: 56%;
     min-width: 300px; 
-    height: 210px; 
-    overflow-y: scroll;  
+    height: 230px;  
     flex-wrap: wrap;
     flex-grow: 3;
 }
@@ -278,13 +277,70 @@ body {
 }
 
 .pic_container {
+    border: 1px solid grey; 
+    border-style: groove; 
+    position: relative; 
     width: 100%; 
     background-color: white; 
+    overflow: hidden; 
 }
 
 
+.slide_image img {
+    width: 100%;
+}
+
+.slide_image {
+    position: absolute; 
+    width: 100%; 
+    height: 100%; 
+}
 
 
+.btn {
+    position: absolute; 
+}
+
+#prev_img {
+    padding-top: 90px; 
+    padding-bottom: 80px; 
+    width: 50px; 
+    height: 50px; 
+}
+
+#next_img {
+    padding-top: 90px; 
+    padding-bottom: 80px; 
+    width: 50px; 
+    height: 50px; 
+    
+}
+
+#prev {
+    left: -3%; 
+    display: absolute; 
+    opacity: 0; 
+    transition: .3s all;   
+    transition-delay: 0s;  
+}
+
+#next {
+    right: -3%; 
+    display: absolute; 
+    opacity: 0; 
+    transition: .3s all;   
+    transition-delay: 0s;  
+}
+
+#prev:hover {
+    transition-delay: 0s; 
+    opacity: 1; 
+}
+
+#next:hover {
+    transition-delay: 0s; 
+    opacity: 1; 
+}
 
 
     
