--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,7 @@ body {
 
 #placeholder {
     min-width: 100px;  
-    width: auto; 
+    width: 57%; 
     height: auto; 
     margin-top: 10px; 
     display: flex; 
@@ -253,12 +253,13 @@ body {
 
 #music_text {
     margin-top: 10px; 
+    height: 223px; 
     display: none; 
-    width: 56%;
-    min-width: 300px; 
-    height: 230px;  
+    width: 57%;
+    min-width: 330px; 
     flex-wrap: wrap;
     flex-grow: 3;
+    margin-bottom: 5px; 
 }
 
 #section_two { 
@@ -271,29 +272,23 @@ body {
     flex-wrap: wrap; 
 }
 
-#music h5 {
-    margin: 0; 
-    padding: 0; 
-}
-
 .pic_container {
-    border: 1px solid grey; 
-    border-style: groove; 
     position: relative; 
     width: 100%; 
-    background-color: white; 
-    overflow: hidden; 
+    height: 223px; 
+    background-color: #384e72; 
+    overflow: hidden;
+    box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.25), 0 10px 33.33px 0 rgba(0, 0, 0, 0.2);
 }
 
 
 .slide_image img {
+    border-radius: 0px; 
     width: 100%;
 }
 
 .slide_image {
     position: absolute; 
-    width: 100%; 
-    height: 100%; 
 }
 
 
@@ -335,11 +330,13 @@ body {
 #prev:hover {
     transition-delay: 0s; 
     opacity: 1; 
+    cursor: pointer; 
 }
 
 #next:hover {
     transition-delay: 0s; 
     opacity: 1; 
+    cursor: pointer; 
 }
 
 
